# miniRL

./: .gitignore  README.md  WIP.md  mypy.ini  pyproject.toml  work_in_progress.md
examples/: 01_run_random_agent.py  02_train_q_learning.py  03_train_linear_agent.py  __init__.py  cartpole_env.py  line_world_env.py  my_custom_env.py  test_lib.py
miniRL/: __init__.py  core.py  random_utils.py  registration.py  types.py  utils.py  vectors.py  wrappers.py
miniRL/envs/: __init__.py  registry.py
miniRL/envs/classic/: __init__.py  cartpole.py  mountain_car.py
miniRL/spaces/: __init__.py  base.py  box.py  discrete.py  spec.py
miniRL/utils/: seeding.py
tests/: __init__.py  _dummy_env.py  run_tests.py  test_core_wrappers.py  test_dummy_env.py  test_mountain_car.py  test_registry.py  test_spaces.py  test_utils.py
