[project]
name = "miniRL"
version = "0.1.0"
description = "A minimal, lightweight reinforcement learning library inspired by Gymnasium, PettingZoo, and Stable Baselines3 - built for learning, experimenting, and customisation."
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miniRL"] 
